TypeChecking/test_cases/good/self-method.cl
class Main {
  main( ) : Object { 5 } ; 

  self(x : Int, y : String) : Int { 5 } ; 
} ;

